--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node_modules\\.bin\\webpack --config webpack.config.prod.js",
     "eslint": "node_modules\\.bin\\eslint ./src/index.jsx --fix"
   },
-  "productName": "react-boilerplate",
+  "productName": "react-router-boilerplate",
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -47,6 +47,7 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.1.1",
     "react-router": "^4.2.0",
+    "react-router-dom":"^4.2.2",
     "resolve-url-loader": "^2.1.1",
     "uglifyjs-webpack-plugin": "^1.0.1"
   }
