--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": [
-    "react",
-    ["es2015",{ "modules": false }]
-  ],
-  "plugins": [
-    "react-hot-loader/babel"
-  ]
+  "presets": ["react", ["es2015", { "modules": false }]],
+  "plugins": ["react-hot-loader/babel", "syntax-dynamic-import"]
 }
