--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-css-modules": "^3.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -33,13 +34,13 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
+    "less": "^3.9.0",
     "less-loader": "^4.0.5",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.3",
+    "webpack-dev-server": "^3.2.1",
     "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
@@ -47,7 +48,7 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.1.1",
     "react-router": "^4.2.0",
-    "react-router-dom":"^4.2.2",
+    "react-router-dom": "^4.2.2",
     "resolve-url-loader": "^2.1.1",
     "uglifyjs-webpack-plugin": "^1.0.1"
   }
